# wanzhuanwx

./: .gitattributes  .gitignore  conanfile.py  readme.md
src/: CMakeLists.txt
src/wanzhuanwx/: icon.xpm  wanzhuanwx.cpp
